--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start",
     "lint": "next lint --fix",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "stylelint-check": "stylelint-config-prettier-check"
   },
   "dependencies": {
+    "@types/eslint-config-prettier": "^6.11.0",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -38,7 +40,11 @@
     "@storybook/react": "^7.2.3",
     "@storybook/testing-library": "^0.2.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-storybook": "^0.6.13",
-    "storybook": "^7.2.3"
+    "prettier": "3.0.1",
+    "storybook": "^7.2.3",
+    "stylelint-config-prettier": "^9.0.5"
   }
 }
