--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint --fix",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "stylelint-check": "stylelint-config-prettier-check"
+    "stylelint-check": "stylelint-config-prettier-check",
+    "test-storybook": "test-storybook",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "@types/eslint-config-prettier": "^6.11.0",
@@ -31,18 +33,27 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.2.3",
     "@storybook/addon-essentials": "^7.2.3",
     "@storybook/addon-interactions": "^7.2.3",
     "@storybook/addon-links": "^7.2.3",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.6",
     "@storybook/blocks": "^7.2.3",
     "@storybook/nextjs": "^7.2.3",
     "@storybook/react": "^7.2.3",
+    "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "axe-playwright": "^1.2.3",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "jest-environment-jsdom": "^29.6.2",
+    "next-router-mock": "^0.9.9",
     "prettier": "3.0.1",
     "storybook": "^7.2.3",
     "stylelint-config-prettier": "^9.0.5"
